--- a/nx.json
+++ b/nx.json
@@ -14,6 +14,7 @@
     ],
     "sharedGlobals": ["{workspaceRoot}/.github/workflows/ci.yml"]
   },
+  "neverConnectToCloud": true,
   "nxCloudId": "692c76511b385555202ef3db",
   "plugins": [
     {
