--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.0",
     "@nestjs/platform-express": "^11.0.0",
+    "@nestjs/swagger": "^11.2.3",
     "axios": "^1.6.0",
     "drizzle-orm": "^0.45.1",
     "pg": "^8.16.3",
