--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@nestjs/platform-express": "^11.0.0",
     "@nestjs/swagger": "^11.2.3",
     "axios": "^1.6.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.3",
     "drizzle-orm": "^0.45.1",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.1.13",
@@ -46,6 +48,7 @@
     "jest-util": "^30.0.2",
     "nx": "22.1.3",
     "prettier": "^2.6.2",
+    "supertest": "^7.1.4",
     "ts-jest": "^29.4.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
